fix form not properly collapsing on screen size change

--- a/src/components/VariantParserComponent/VariantParserComponent.scss
+++ b/src/components/VariantParserComponent/VariantParserComponent.scss
@@ -15,6 +15,7 @@
 
   .parser-form-grid {
     column-count: 2;
+    min-width: 0;
     @media (max-width: 768px) {
       column-count: unset;
     }
